--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
+    "electron": "^8.2.5",
     "express": "^4.17.1",
     "nightmare": "^3.0.2",
     "request": "^2.88.2",
